# test

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json
New folder/: index-02.html
back-end/: Dockerfile  DockerfileDev  docker-compose-local.yml  docker-compose.yml  pyproject.toml
back-end/src/: cli.py  config.py
back-end/src/apps/: __init__.py  events.py  server.py
back-end/src/apps/admin/: payments.py  schemas.py
back-end/src/apps/payments/models/: __init__.py  payments.py
back-end/src/core/: db.py  types.py
back-end/src/core/utils/: __init__.py  file_validator.py  hashing.py  mixins.py  password.py  schema.py
back-end/src/htmldir/: checkout.html
back-end/src/migrations/: env.py
back-end/src/migrations/versions/: 1ec9860b51d0_.py
front-end/: Refund_and_Cancellation.html  about-us.html  admin.html  base.html  blog-grid.html  blog.html  checkout.html  contact-us.html  ecommerce.db  errors-404.html  faq.html  index-02.html  my-cart.html  portfolio-01.html  portfolio-02.html  pricing.html  product1.html  server.js  service.html  shop.html  single-blog.html  single-portfolio.html  single-service.html  single-shop.html  single-team.html  team.html  test.html  testimonial.html  testorder.html
front-end/assets/: admin_user.html
front-end/zeny/: about-us.html  base.html  blog.html  errors-404.html  index.html  my-cart.html  order-confirmation.html  portfolio-01.html  portfolio-02.html  pricing.html  privacy_policy.html  product1.html  product2.html  product3.html  product4.html  product5.html  shop.html  single-portfolio.html  test.html  (+5 more)
(+1 files in other folders)
