[tool.poetry]
name = "optech"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.34"
fastapi = "^0.114.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
uvicorn = "^0.30.6"
alembic = "^1.13.2"
rich = "^13.8.1"
typer = "^0.12.5"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
fastapi-pagination = "^0.12.27"
payu-websdk = "^0.1.7"
strenum = "^0.4.15"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
